[ios] Move all logic under Collections flag to under UIRefresh flag

Remove all references to CollectionsUIReboot flag.

Bug: 875063

Change-Id: I5222da0ba5ec50da282a434f8e075758feebb59a
Reviewed-on: https://chromium-review.googlesource.com/1178932
Reviewed-by: Sergio Collazos <sczs@chromium.org>
Reviewed-by: Rohit Rao <rohitrao@chromium.org>
Commit-Queue: Chris Lu <thegreenfrog@chromium.org>
Cr-Commit-Position: refs/heads/master@{#584071}
Former-commit-id: 5cfaf0a0e58b99506f313f25068e91661cabd2e2