ios/chrome/browser/ui/tab_grid/tab_grid_mediator.mm
@@ -20,6 +20,7 @@
 #import "ios/chrome/browser/tabs/tab_model.h"
 #import "ios/chrome/browser/ui/tab_grid/grid/grid_consumer.h"
 #import "ios/chrome/browser/ui/tab_grid/grid/grid_item.h"
+#include "ios/chrome/browser/ui/ui_util.h"
 #import "ios/chrome/browser/web/tab_id_tab_helper.h"
 #include "ios/chrome/browser/web_state_list/web_state_list.h"
 #import "ios/chrome/browser/web_state_list/web_state_list_observer_bridge.h"
@@ -346,7 +347,7 @@ web::WebState* GetWebStateWithId(WebStateList* web_state_list,
     return;
   }
   UIImage* defaultFavicon;
-  if (experimental_flags::IsCollectionsUIRebootEnabled()) {
+  if (IsUIRefreshPhase1Enabled()) {
     if (webState->GetBrowserState()->IsOffTheRecord()) {
       defaultFavicon = [UIImage imageNamed:@"default_world_favicon_incognito"];
     } else {
