ios/chrome/browser/ui/ui_feature_flags.cc
@@ -13,9 +13,6 @@ const base::Feature kUIRefreshLocationBar{"UIRefreshLocationBar",
 const base::Feature kUIRefreshPhase1{"UIRefreshPhase1",
                                      base::FEATURE_ENABLED_BY_DEFAULT};
 
-const base::Feature kCollectionsUIReboot{"CollectionsUIReboot",
-                                         base::FEATURE_DISABLED_BY_DEFAULT};
-
 const base::Feature kInfobarsUIReboot{"InfobarsUIReboot",
                                       base::FEATURE_DISABLED_BY_DEFAULT};
 
